--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 NEXT_PUBLIC_BACKEND_URL=http://localhost:8000
+GITHUB_ID=Ov23liSGTILkDQ7y5tYM
+GITHUB_SECRET=9338b88f79f5c4ce63fa69f461e4f4d519d2702f
+NEXTAUTH_URL=http://localhost:3000
+NO_SECRET=ramdomstring
